--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
     "@prisma/client": "^6.14.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "idb": "^8.0.0",
     "ioredis": "^5.4.1",
     "jsbarcode": "^3.11.5",
+    "lucide-react": "^0.542.0",
     "next": "^15.4.6",
     "next-auth": "^5.0.0-beta.29",
     "nodemailer": "^6.9.15",
@@ -41,8 +45,11 @@
     "rate-limiter-flexible": "^7.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.13",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
