--- a/package.json
+++ b/package.json
@@ -26,12 +26,29 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.14.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.7.0",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -41,15 +58,19 @@
     "lucide-react": "^0.542.0",
     "next": "^15.4.6",
     "next-auth": "^5.0.0-beta.29",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.9.15",
     "pdf-lib": "^1.17.1",
     "rate-limiter-flexible": "^7.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
+    "vaul": "^1.1.2",
+    "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
