--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "idb": "^8.0.0",
     "ioredis": "^5.4.1",
